correct alignment for navigation button titles

--- a/src-demeter/app/user/project/detail/_shared/layout/layout.component.scss
+++ b/src-demeter/app/user/project/detail/_shared/layout/layout.component.scss
@@ -74,6 +74,7 @@ $left-nav-background-color: #f3f6e6;
     height: 50px;
     background-color: $left-nav-background-color;
     .icon {
+      width: 50px;
       padding: 10px;
     }
     &.active,
